--- a/app/views/homepage/index.html
+++ b/app/views/homepage/index.html
@@ -6,7 +6,7 @@
 
 <div class="bg_white">
   <div class="container">
-    <%= scrivito_tag :div, @obj, :content %>
+    <%= scrivito_tag :div, @obj, :body %>
   </div>
 </div>
 
