--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <%= scrivito_tag :div, @obj, :content %>
+        <%= scrivito_tag :div, @obj, :body %>
         <%= render partial: "shared/content_footer" %>
       </div>
     </div>
