--- a/app/views/blog/_post.html.erb
+++ b/app/views/blog/_post.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <%= scrivito_tag :div, post, :content, class: "blog_body" %>
+  <%= scrivito_tag :div, post, :body, class: "blog_body" %>
 
   <div class="blog_footer">
     <a class="btn btn-default btn-sm" href="">0 Comments</a>
