--- a/app/views/page/thumbnail.html.erb
+++ b/app/views/page/thumbnail.html.erb
@@ -1,3 +1,3 @@
 <%= scrivito_thumbnail 'Page', :content do %>
-  A simple content page.
+  A simple content page with a headline and content consisting of widgets.
 <% end %>
