--- a/app/views/shared/_flap.html.erb
+++ b/app/views/shared/_flap.html.erb
@@ -12,19 +12,38 @@
       </div>
 
       <div class="modal-body">
-        <form >
-          <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputusername" value="demo">
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control" id="exampleInputpassword" placeholder="Password">
-          </div>
-        </form>
-      </div>
 
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary pull-left">Login</button>
-        <button type="submit" class="btn btn-default pull-left disabled">Register</button>
+        <% if flash[:alert].present? %>
+          <div class="alert alert-danger" role="alert">
+            <%= flash[:alert] %>
+          </div>
+        <% end %>
+
+        <% if not logged_in? %>
+          <%= form_tag session_path, role: 'form' do %>
+            <div class="form-group">
+              <%= text_field_tag :login, 'demo', class: 'form-control', placeholder: 'Enter login' %>
+            </div>
+            <div class="form-group">
+              <%= password_field_tag :password, '', class: 'form-control', placeholder: 'Enter password' %>
+            </div>
+          <% end %>
+
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary pull-left">Login</button>
+            <button type="submit" class="btn btn-default pull-left disabled">Register</button>
+          </div>
+        <% end %>
+
+        <% if logged_in? %>
+          <p>You are logged in as user '<%= session[:user] %>'.</p>
+          <div class="modal-footer">
+            <%= link_to session_path, class: 'navbar-btn navbar-right', method: :delete do %>
+              <button class="btn btn-warning">Log out</button>
+            <% end %>
+          </div>
+        <% end %>
+
       </div>
 
     </div>
