--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,7 +3,7 @@
 
   <%= scrivito_tag_list(:ul, @obj.homepage, :toclist, class: "nav navbar-nav") do |list, item| %>
     <% if item.show_in_navigation? -%>
-      <%= list.tag(:li, data: {path: item.path}, class: "dropdown") do %>
+      <%= list.tag(:li, data: {path: item.path}, class: "dropdown #{active_class_for_parent(item, @obj)}") do %>
         <%= link_to(scrivito_path(item), class: "dropdown-toggle") do %>
           <%= strip_tags(item.title) %>
           <% if item.has_subnav_content? %>
@@ -12,7 +12,7 @@
         <% end %>
         <%= scrivito_tag_list(:ul, item, :toclist, class: "dropdown-menu", role: "menu") do |list2, item2| %>
           <% if item2.show_in_navigation? -%>
-            <%= list2.tag(:li, data: {path: item2.path}, class: active_class(item2, @obj)) do %>
+            <%= list2.tag(:li, data: {path: item2.path}, class: active_class_for_parent(item2, @obj)) do %>
               <%= link_to(scrivito_path(item2)) do %>
                 <%= strip_tags(item2.title) %>
               <% end -%>
