added thumbnail images for the app's own widgets

--- a/app/views/person_widget/thumbnail.html.erb
+++ b/app/views/person_widget/thumbnail.html.erb
@@ -1,13 +1,3 @@
-<div class="editing-dialog-thumbnail">
-  <div class="visualization">
-    <span class="icon editing-icon-list"></span>
-  </div>
-
-  <div class="title">
-    Person Info
-  </div>
-
-  <div class="description">
-    Person Info Container
-  </div>
-</div>
+<%= scrivito_thumbnail 'Person Info', image_tag("widgets/widget_preview_person.png") do %>
+  Person Info Container
+<% end %>
