--- a/app/views/background_widget/thumbnail.html.erb
+++ b/app/views/background_widget/thumbnail.html.erb
@@ -1,13 +1,3 @@
-<div class="editing-dialog-thumbnail">
-  <div class="visualization">
-    <span class="icon editing-icon-list"></span>
-  </div>
-
-  <div class="title">
-    Coloured Background
-  </div>
-
-  <div class="description">
-    Insert a coloured background and some content.
-  </div>
-</div>
+<%= scrivito_thumbnail 'Background', image_tag("widgets/widget_preview_background.png") do %>
+  Coloured page-wide background with content.
+<% end %>
