--- a/app/views/box_widget/thumbnail.html.erb
+++ b/app/views/box_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Box', :box do %>
+<%= scrivito_thumbnail 'Box', image_tag("widgets/widget_preview_box.png") do %>
   Box with a frame and coloured background (optional).
 <% end %>
