--- a/app/views/listitem_widget/thumbnail.html.erb
+++ b/app/views/listitem_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Listitem', :headline do %>
+<%= scrivito_thumbnail 'Listitem', image_tag("widgets/widget_preview_teaser_small.png") do %>
   List item with headline, image and text.
 <% end %>
