--- a/app/assets/stylesheets/editing.css
+++ b/app/assets/stylesheets/editing.css
@@ -2,6 +2,7 @@
  *= require scrivito
  *= require scrivito_editors
  *= require google_maps_widget/editing
+ *= require scrivito_elastic_slider_widget/editing
  *= require scrivito_tabbed_content_widget/editing
  *= require scrivito_slick_slider_widget/editing
  *= require icon_box_widget/editing
