--- a/app/views/background_widget/details.html.erb
+++ b/app/views/background_widget/details.html.erb
@@ -1,6 +1,9 @@
-<div class="details-view">
+<div class="details-view editing-colours">
   <h4>Select background colour</h4>
   <% Scrivito::ObjClass.find("BackgroundWidget").attributes["colour"].values.each do |colour| %>
-    <%= scrivito_tag :input, widget, "colour", type: "button", 'button-value' => colour, class: "button_editor bg_#{colour}", style: "padding: 20px;", 'data-editor' => 'none' %>
+    <% classes = "button_editor bg_#{colour}" %>
+    <% if colour == widget.colour; classes += " active"; end %>
+    <%= scrivito_tag :input, widget, "colour", type: "button", 'button-value' => colour, class: classes, 'data-editor' => 'none' %>
   <% end %>
 </div>
+
