--- a/app/views/image_widget/show.html.erb
+++ b/app/views/image_widget/show.html.erb
@@ -1,1 +1,1 @@
-<%= scrivito_image_tag(widget, :image, class: "img-responsive", data: { filter: 'images' }) %>
+<%= scrivito_image_tag widget, :image %>
