--- a/app/views/shared/_header_image.html.erb
+++ b/app/views/shared/_header_image.html.erb
@@ -8,7 +8,7 @@
       <img src="<%= asset_path("scriv-uno/teaser_03.jpg") %>" alt="">
     <% end %>
     <div class="container">
-      <h1 class="h1"><i class="foundicon-globe2"></i><%= @obj.title %></h1>
+      <h1 class="h1"><i class="fa fa-<%= @obj.icon %>"></i><%= @obj.title %></h1>
     </div>
   </div>
 <% end %>
