improving color display in icon_box_widget

--- a/app/assets/stylesheets/editing.css
+++ b/app/assets/stylesheets/editing.css
@@ -5,5 +5,5 @@
  *= require scrivito_tabbed_content_widget/editing
  *= require scrivito_slick_slider_widget/editing
  *= require icon_box_widget/editing
- *= require editing/button_editor
+ *= require_tree ./editing
  */
