--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -413,30 +413,30 @@ ul {padding-left:20px;}
 /* redactor_editor fixes
 ================================================== */
 
-.redactor_box {background:transparent!important;}
-.redactor_editor {background:transparent!important;}
+.redactor-box {background:transparent!important;}
+.redactor-editor {background:transparent!important;}
 
-.redactor_editor h1,
-.redactor_editor h2,
-.redactor_editor h3,
-.redactor_editor h4,
-.redactor_editor h5,
-.redactor_editor h6 { color: inherit!important;}
+.redactor-editor h1,
+.redactor-editor h2,
+.redactor-editor h3,
+.redactor-editor h4,
+.redactor-editor h5,
+.redactor-editor h6 { color: inherit!important;}
 
-.redactor_editor div,
-.redactor_editor p,
-.redactor_editor ul,
-.redactor_editor ol,
-.redactor_editor table,
-.redactor_editor dl,
-.redactor_editor blockquote,
-.redactor_editor pre,
-.redactor_editor h1,
-.redactor_editor h2,
-.redactor_editor h3,
-.redactor_editor h4,
-.redactor_editor h5,
-.redactor_editor h6 {font-family: inherit!important; font-size:inherit!important;}
+.redactor-editor div,
+.redactor-editor p,
+.redactor-editor ul,
+.redactor-editor ol,
+.redactor-editor table,
+.redactor-editor dl,
+.redactor-editor blockquote,
+.redactor-editor pre,
+.redactor-editor h1,
+.redactor-editor h2,
+.redactor-editor h3,
+.redactor-editor h4,
+.redactor-editor h5,
+.redactor-editor h6 {font-family: inherit!important; font-size:inherit!important;}
 
 
 
