--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -518,8 +518,9 @@ ul {padding-left:20px;}
 	margin:15px auto 25px;
 	}
 
-.box_icon_i.green{ border:2px solid #78c9a6; }
-.box_icon_i.blue{ border:2px solid #465b66; }
+.box_icon_i.green {border:2px solid #78c9a6; background-color: #78c9a6 !important;}
+.box_icon_i.blue {border:2px solid #465b66; background-color: #465b66 !important; }
+.box_icon_i.grey {background-color: #fafafa !important;}
 
 .box_icon_i span {
     background:#aaa;
