--- a/app/views/navi_widget/thumbnail.html.erb
+++ b/app/views/navi_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
 <%= scrivito_thumbnail 'Navigation', image_tag("widgets/widget_preview_nav.png") do %>
-  Second-level Navigation
+  Inserts the ScrivUno second-level navigation.
 <% end %>
