fixed icon colour

--- a/app/views/icon_box_widget/show.html.erb
+++ b/app/views/icon_box_widget/show.html.erb
@@ -1,5 +1,5 @@
-<div class="scrivito-icon-box box_icon_i <%= widget.color %> <%= widget.size %> <%= widget.style %>">
+<div class="scrivito-icon-box box_icon_i <%= widget.background_color %> <%= widget.size %> <%= widget.style %>">
   <span>
-    <i class="fa fa-<%= widget.icon %>"></i>
+    <i class="fa fa-<%= widget.icon %> <%= widget.color %>"></i>
   </span>
 </div>
