correcting old widget previews

--- a/app/views/image_widget/thumbnail.html.erb
+++ b/app/views/image_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Image Widget', :image do %>
+<%= scrivito_thumbnail 'Image Widget', image_tag("widgets/widget_preview_image.png") do %>
   A widget with an image.
 <% end %>
