--- a/app/views/text_widget/thumbnail.html.erb
+++ b/app/views/text_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Text Widget', :text do %>
+<%= scrivito_thumbnail 'Text Widget', image_tag("widgets/widget_preview_text.png") do %>
   A widget for text and HTML content.
 <% end %>
