--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,4 +19,5 @@
  *= require scrivito_elastic_slider_widget/application
  *= require scrivito_slick_slider_widget/application
  *= require scrivito_icon_box_widget
+ *= require scrivito_video_widget
  */
