--- a/app/views/listitem_widget/details.html.erb
+++ b/app/views/listitem_widget/details.html.erb
@@ -3,7 +3,11 @@
   <%= scrivito_tag(:p, widget, :headline) %>
 
   <h4>Headline Size</h4>
-  <%= scrivito_edit_enum(widget, :headline_level, 'data-editor' => 'none') %>
+  <%= scrivito_toggle_button_editor(widget, "headline_level", %w(h2 h3 h4)) do |elem|
+    scrivito_tag(:button, widget, "headline_level", class: "#{elem == widget.send("headline_level") ? 'active' : ''} #{elem}", data: {editor: 'scrivito-toggle-button', content: elem}) do
+      elem
+    end
+  end %>
 
   <h4>Subline</h4>
   <%= scrivito_tag(:p, widget, :subline) %>
