--- a/app/views/listitem_widget/show.html.erb
+++ b/app/views/listitem_widget/show.html.erb
@@ -7,7 +7,7 @@
     <%= scrivito_tag :span, widget, :subline, class: "meta" %>
     <%= scrivito_tag(:p, widget, :content) %>
     <% if widget.link.present? %>
-      <%= link_to(widget.link.display_title, scrivito_path(widget.link)) %>
+      <%#= link_to(widget.link.display_title, scrivito_path(widget.link)) %>
     <% end %>
   </div>
 </div>
