--- a/app/views/icon_listitem_widget/details.html.erb
+++ b/app/views/icon_listitem_widget/details.html.erb
@@ -6,11 +6,7 @@
   <%= scrivito_tag(:p, widget, :headline) %>
 
   <h4>Headline Size</h4>
-  <%= scrivito_toggle_button_editor(widget, "headline_level", %w(h2 h3 h4)) do |elem|
-    scrivito_tag(:button, widget, "headline_level", class: "#{elem == widget.send("headline_level") ? 'active' : ''} #{elem}", data: {editor: 'scrivito-toggle-button', content: elem}) do
-      elem
-    end
-  end %>
+  <%= render partial: 'shared/toggle_buttons', locals: {obj: widget, attribute: "headline_level"} %>
 
   <h4>Text</h4>
   <%= scrivito_tag(:p, widget, :content) %>
