--- a/app/views/person/details.html.erb
+++ b/app/views/person/details.html.erb
@@ -3,11 +3,7 @@
   <%= scrivito_tag :span, @obj, :title %>
 
   <h4>Is A Company?</h4>
-  <%= scrivito_toggle_button_editor(@obj, "is_company", %w(yes no)) do |elem|
-    scrivito_tag(:button, @obj, "is_company", class: "#{elem == @obj.send("is_company") ? 'active' : ''} #{elem}", data: {editor: 'scrivito-toggle-button', content: elem}) do
-      elem
-    end
-  end %>
+  <%= render partial: 'shared/toggle_buttons', locals: {obj: @obj, attribute: "is_company"} %>
 
   <h4>Function</h4>
   <%= scrivito_tag :span, @obj, :function %>
