--- a/app/views/person_widget/details.html.erb
+++ b/app/views/person_widget/details.html.erb
@@ -2,9 +2,5 @@
   <h4>Person</h4>
   <%= scrivito_edit_reference(widget, :person) %>
   <h4>Show Picture?</h4>
-  <%= scrivito_toggle_button_editor(widget, "show_picture", %w(yes no)) do |elem|
-    scrivito_tag(:button, widget, "show_picture", class: "#{elem == widget.send("show_picture") ? 'active' : ''} #{elem}", data: {editor: 'scrivito-toggle-button', content: elem}) do
-      elem
-    end
-  end %>
+  <%= render partial: 'shared/toggle_buttons', locals: {obj: widget, attribute: "show_picture"} %>
 </div>
