--- a/app/views/icon_listitem_widget/show.html.erb
+++ b/app/views/icon_listitem_widget/show.html.erb
@@ -6,10 +6,10 @@
     <% level = widget.headline_level || "h4" %>
     <% if widget.link.present? && !scrivito_in_editable_view? %>
       <%= link_to scrivito_path(widget.link) do %>
-        <%= scrivito_tag level.to_sym, widget, :headline %>
+        <%= scrivito_tag :h3, widget, :headline %>
       <% end %>
     <% else %>
-      <%= scrivito_tag level.to_sym, widget, :headline %>
+      <%= scrivito_tag :h3, widget, :headline %>
     <% end %>
     <%= scrivito_tag(:p, widget, :content) %>
   </div>
