--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,8 @@
  *= require scrivito_slick_slider_widget/application
  *= require scrivito_icon_box_widget
  *= require scrivito_video_widget
+ *= require scrivito_tabbed_content_widget
+ *= require scrivito_accordion_widget
+ *= require scrivito_slick_slider_widget
  *= require_tree ./application
  */
