--- a/app/views/homepage/index.html
+++ b/app/views/homepage/index.html
@@ -4,7 +4,7 @@
   </div>
 <% end %>
 
-<div class="bg_white">
+<div class="section bg_white">
   <div class="container">
     <%= scrivito_tag :div, @obj, :body %>
   </div>
