--- a/app/views/background_widget/show.html.erb
+++ b/app/views/background_widget/show.html.erb
@@ -1,3 +1,3 @@
-<div class="bg_<%= widget.colour %>">
+<div class="section <%= widget.colour %>">
   <%= scrivito_tag(:div, widget, :content, class: "container") %>
 </div>
