--- a/app/views/blog/details.html.erb
+++ b/app/views/blog/details.html.erb
@@ -1,4 +1,5 @@
 <div class="details-view">
-  <h4>Title</h4>
-  <%= scrivito_tag(:div, @obj, :title) %>
+  <%= scrivito_details_for 'Title' do %>
+    <%= scrivito_tag(:div, @obj, :title) %>
+  <% end %>
 </div>
