--- a/app/views/headline_widget/show.html.erb
+++ b/app/views/headline_widget/show.html.erb
@@ -1,3 +1,3 @@
 <div class="headline">
-  <%= scrivito_tag :h3, widget, :headline %>
+  <%= scrivito_tag(widget.tag, widget, :headline, class: widget.css_class, id: widget.anchor.presence) %>
 </div>
