Style fixes for secitons

--- a/app/assets/stylesheets/application/colors.css.scss
+++ b/app/assets/stylesheets/application/colors.css.scss
@@ -24,13 +24,13 @@
   border-color: #78c9a6;
   background: #78c9a6 !important;
 }
-.bg_green * { color:#fff;}
+.bg_green * { color: #fff !important;}
 
 .bg_blue {
   border-color: #465b66;
   background: #465b66 !important;
 }
-.bg_blue * { color:#eee;}
+.bg_blue * { color:#eee !important;}
 .bg_blue .headline { border-bottom:none;}
 
 
