--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,5 +1,5 @@
 <% if @obj.teaser_headline.presence || @obj.teaser_content.presence || scrivito_in_editable_view? %>
-  <div class="bg_grey1">
+  <div class="section bg_grey1">
     <div id="#content" class="container">
       <div class="row">
         <div class="col-md-12">
@@ -11,7 +11,7 @@
   </div>
 <% end %>
 
-<div class="bg_white">
+<div class="section bg_white">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
