Default size for iframe

--- a/app/views/iframe_widget/show.html.erb
+++ b/app/views/iframe_widget/show.html.erb
@@ -1,1 +1,1 @@
-<iframe width="<%= widget.width.presence || '100%' %>" height="<%= widget.height.presence || '425' %>" frameborder="0" allowfullscreen="" src="<%= widget.link.url %>"></iframe>
+<iframe width="<%= widget.width %>" height="<%= widget.height %>" frameborder="0" allowfullscreen="" src="<%= widget.link.url %>"></iframe>
