--- a/app/views/icon_listitem_widget/details.html.erb
+++ b/app/views/icon_listitem_widget/details.html.erb
@@ -1,17 +1,21 @@
 <div class="details-view">
-  <h4>Icon</h4>
-  <%= render 'icon_box_widget/partials/icons_picker', widget: widget, attribute: :icon %>
+  <%= scrivito_details_for 'Icon' do %>
+    <%= render 'icon_box_widget/partials/icons_picker', widget: widget, attribute: :icon %>
+  <% end %>
 
-  <h4>Headline</h4>
-  <%= scrivito_tag(:p, widget, :headline) %>
+  <%= scrivito_details_for 'Headline' do %>
+    <%= scrivito_tag(:p, widget, :headline) %>
+  <% end %>
 
-  <h4>Headline Size</h4>
-  <%= render partial: 'shared/toggle_buttons', locals: {obj: widget, attribute: "headline_level"} %>
+  <%= scrivito_details_for 'Headline Size' do %>
+    <%= render partial: 'shared/toggle_buttons', locals: {obj: widget, attribute: "headline_level"} %>
+  <% end %>
 
-  <h4>Text</h4>
-  <%= scrivito_tag(:p, widget, :content) %>
+  <%= scrivito_details_for 'Text' do %>
+    <%= scrivito_tag(:p, widget, :content) %>
+  <% end %>
 
-  <h4>Link</h4>
-  <%= scrivito_edit_link(widget, :link) %>
-
+  <%= scrivito_details_for 'Link' do %>
+    <%= scrivito_edit_link(widget, :link) %>
+  <% end %>
 </div>
