--- a/app/views/image/details.html.erb
+++ b/app/views/image/details.html.erb
@@ -1,6 +1,9 @@
 <div class="details-view">
-  <h4>Name</h4>
-  <%= scrivito_tag :span, @obj, :name %>
-  <h4>Title</h4>
-  <%= scrivito_tag :span, @obj, :title %>
+  <%= scrivito_details_for 'Name' do %>
+    <%= scrivito_tag :span, @obj, :name %>
+  <% end %>
+
+  <%= scrivito_details_for 'Title' do %>
+    <%= scrivito_tag :span, @obj, :title %>
+  <% end %>
 </div>
