--- a/app/views/search_page/index.html.erb
+++ b/app/views/search_page/index.html.erb
@@ -1,4 +1,4 @@
-<div class="bg_grey1">
+<div class="section bg_grey1">
   <div id="#content" class="container">
     <div class="row">
       <div class="col-md-12">
